test/libhyperion/syntaxTests/array/copy_from_function_type.hyp
// Example from https://github.com/ethereum/solidity/issues/12558
pragma abicoder v2;
contract C {
  function() external[1][] s0;
  constructor(function() external[1][] memory i0)
  {
    i0[0] = s0[1];
  }
}
// ----
// TypeError 4888: (101-128): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
